[package]
name = "constellation-spy"
version = "0.1.0"
edition = "2021"
description = "Sniffs LCM and Zenoh traffic for the LCM Constellation app and emits NDJSON metadata."

[[bin]]
name = "spy"
path = "src/main.rs"

[dependencies]
zenoh = "1"
socket2 = "0.5"
serde_json = "1"
base64 = "0.22"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }

[profile.release]
opt-level = 2
